<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Milwaukee</string>
    <string name="title_my_milwaukee">My Milwaukee</string>
    <string name="error_text_offline">The Internet connection appears to be offline.</string>
    <string name="dialog_title_delete_prefix">Delete </string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_add_category">Add Category</string>
    <string name="action_search_item">Search Inventory</string>
    <string name="action_done">Done</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_manufacturer">Add Manufacturer</string>
    <string name="action_delete">Delete</string>
    <string name="action_ok">Ok</string>
    <string name="action_filter">Filter Options</string>

    <!-- Main -->
    <string name="main_title_inventory">Inventory</string>
    <string name="main_title_inventory_title">My Inventory</string>
    <string name="main_title_nearby">Nearby</string>
    <string name="main_title_nearby_title">Nearby Devices</string>
    <string name="main_title_settings">Settings</string>
    <string name="main_title_settings_title">Settings</string>
    <string name="main_title_milwaukee_item_title">Milwaukee</string>
    <string name="main_title_other_item_title">Other</string>
    <string name="main_title_add_item">Add Item</string>
    <string name="main_title_select_category">Select Category</string>
    <string name="main_title_inventory_search_results">Search Results</string>
    <string name="main_title_filter">Filter</string>
    
    <!-- Landing Page -->
    <string name="title_create_account">Create Account</string>
    <string name="title_log_in">Log In</string>
    <string name="title_update_profile">My Profile</string>
    <string name="btn_title_create_account">CREATE ACCOUNT</string>
    <string name="btn_title_log_in">LOG IN</string>

    <!-- Settings -->
    <string name="btn_title_log_out">LOG OUT</string>
    <string name="settings_my_profile">My Profile</string>

    <!-- Create Account -->
    <string name="title_privacy_policy"><a href="http://www.milwaukeetool.com/privacy">Privacy Policy</a></string>
    <string name="text_receive_email_communications">I would like to receive email communications from Milwaukee Tool.</string>
    <string name="title_create_my_milwaukee_account">Create a My Milwaukee&#174; account</string>
    <string name="create_account_no_password_match">Passwords don\'t match.</string>
    <string name="create_account_field_email">Email Address</string>
    <string name="create_account_field_password">Password</string>
    <string name="create_account_field_confirm_password">Confirm Password</string>
    <string name="create_account_field_first_name">First Name</string>
    <string name="create_account_field_last_name">Last Name</string>
    <string name="create_account_field_trade">Trade/Occupation</string>

    <!-- My Profile -->
    <string name="update_profile_title">Title</string>
    <string name="update_profile_company_name">Company Name</string>
    <string name="update_profile_address_1">Address</string>
    <string name="update_profile_address_2">Address 2</string>
    <string name="update_profile_city">City</string>
    <string name="update_profile_state_province">State/Province</string>
    <string name="update_profile_zip_code">Zip/Postal Code</string>
    <string name="update_profile_country">Country</string>
    <string name="update_profile_change_password">Change Password</string>

    <string name="update_profile_phone">Phone</string>
    <string name="update_profile_cell_phone">Cell Phone</string>
    <string name="update_profile_fax">Fax</string>
    <string name="update_profile_email">Email Communications</string>

    <string name="user_information">User Information</string>
    <string name="company_information">Company Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="email_communications">Email Communications</string>
    <string name="change_password">Change Password</string>
    <string name="message_success_updated_profile">Profile Updated</string>
    <string name="message_success_add_item">Item Saved</string>
    <string name="message_success_delete_category">Category Deleted</string>
    <string name="message_success_edit_category">Category Updated</string>
    <string name="message_success_save_category">Category Saved</string>

    <!-- Tool Detail -->
    <string name="tool_detail_description">Description</string>
    <string name="tool_detail_model_number">Model Number</string>
    <string name="tool_detail_name">Tool Number</string>
    <string name="tool_detail_serial_number">Serial Number</string>
    <string name="tool_detail_manufacturer">Manufacturer</string>
    <string name="tool_detail_purchase_location">Purchase Location</string>
    <string name="tool_detail_category">Category</string>
    <string name="tool_detail_notes">Notes</string>
    <string name="tool_detail_proof">Proof of Purchase</string>

    <!-- Inventory Fragment -->
    <string name="add_inventory_item">Search for a model number using the @style/ icon above.</string>
    <string name="no_inventory_message">Add an item to your inventory\nto view it in this list.</string>
    <string name="btn_add_inventory">Add Inventory</string>
    <string name="all_inventory_details_date">Added: </string>

    <!-- Inventory Search -->
    <string name="inventory_search_no_inventory">No items match your search criteria.</string>
    <string name="title_inventory_search_results">Search Inventory</string>
    <string name="search_inventory_hint">Search Inventory</string>

    <!-- Progress Indicator -->
    <string name="progress_bar_default_message">Loading...</string>
    <string name="progress_bar_registering">Registering...</string>
    <string name="progress_bar_logging_in">Signing In...</string>
    <string name="progress_bar_getting_user_details">Getting User Details...</string>
    <string name="progress_bar_saving_user_details">Updating Profile...</string>
    <string name="progress_bar_saving">Saving...</string>
    <string name="progress_bar_searching">Searching...</string>
    <string name="progress_bar_deleting">Deleting...</string>

    <!-- Sign In -->
    <string name="title_sign_in_my_milwaukee_account">Sign in with My Milwaukee&#174; account</string>
    <string name="sign_in_field_title_email">Email Address</string>
    <string name="sign_in_field_title_password">Password</string>
    <string name="text_sign_in_failure">The Email Address field or Password field is incorrect.</string>

    <!-- Change Password -->
    <string name="change_password_title">Change Password</string>
    <string name="change_password_current">Current Password</string>
    <string name="change_password_new">New Password</string>
    <string name="change_password_confirm">Confirm New Password</string>
    <string name="change_password_success">Password Updated</string>
    <string name="change_password_error">Unable to Change Password</string>
    <string name="change_password_saving">Saving Password</string>

    <!-- Error Dialogs -->
    <string name="dialog_title_register_failure">Error Registering</string>
    <string name="dialog_title_sign_in_failure">Error Signing In</string>
    <string name="dialog_title_no_network_connection">No Network Connection</string>
    <string name="dialog_title_get_profile_failure">Error Getting User Details</string>
    <string name="dialog_title_update_profile_failure">Error Updating Profile</string>
    <string name="dialog_title_add_item_failure">Error Saving Item</string>
    <string name="dialog_title_retrieve_inventory_failure">Error Getting Inventory</string>

    <!-- Add Item -->
    <string name="search_replace_wildcard_string">*</string>
    <string name="add_item_milwaukee_search_message">Search for a Milwaukee model\n number using the * icon above.</string>
    <string name="add_item_milwaukee_select_other_message">Select <![CDATA[<strong>OTHER</strong>]]> to enter an item<![CDATA[<br />]]> from a different manufacturer.</string>
    <string name="add_item_search_error">Search Failed</string>
    <string name="add_item_notes_title">Notes</string>
    <string name="add_item_notes_hint">Enter notes here...</string>
    <string name="add_item_loading_inventory">Loading Inventory...</string>

    <!-- Add Kit Items -->
    <string name="add_kit_items_title">Add Kit Items</string>
    <string name="add_kit_items_entries">entries</string>

    <!-- Add Item Details-->
    <string name="item_detail_product_information">PRODUCT INFORMATION</string>

    <!-- Add Other Item -->
    <string name="mfr_add_other_item_edit_manufacturer">Edit Manufacturer</string>
    <string name="mfr_add_other_item_add_manufacturer">Add Manufacturer</string>
    <string name="mfr_add_other_item_manufacturer_name">Manufacturer Title</string>
    <string name="mfr_no_manufacturer_msg">You must add a manufacturer\nbefore you can continue.</string>
    <string name="mfr_dialog_title_add_manufacturer_failure">Unable to Create Manufacturer</string>
    <string name="mfr_dialog_title_update_manufacturer_failure">Unable to Update Manufacturer</string>
    <string name="mfr_dialog_title_delete_manufacturer_failure">Unable to Delete Manufacturer</string>
    <string name="mfr_has_associated_items_msg">Unable to delete manufacturer that has associated items.</string>
    <string name="mfr_dialog_title_get_manufacturers_failure">Error Getting Manufacturers</string>
    <string name="mfr_delete_confirmation_msg">Are you sure you want to delete this manufacturer?</string>
    <string name="mfr_toast_saved">Manufacturer Saved</string>
    <string name="mfr_toast_updated">Manufacturer Updated</string>
    <string name="mfr_toast_deleted">Manufacturer Deleted</string>

    <!-- Category Details -->
    <string name="ctgy_no_category_msg">You must add a category\nbefore you can continue.</string>
    <string name="ctgy_add_category">Add Category</string>
    <string name="ctgy_edit_category">Edit Category</string>
    <string name="ctgy_category_hint">Category Title</string>
    <string name="ctgy_dialog_title_add_category_failure">Unable to Create Category</string>
    <string name="ctgy_dialog_title_get_categories_failure">Error Getting Categories</string>
    <string name="ctgy_dialog_title_update_category_failure">Unable to Update Category</string>
    <string name="ctgy_dialog_title_delete_category_failure">Unable to Delete Category</string>
    <string name="ctgy_has_associated_items_msg">Unable to delete category that has associated items.</string>
    <string name="ctgy_delete_confirmation_msg">You are about to delete this category.  All items assigned to this category will be marked as \&#39;Uncategorized.\&#39;</string>

    <!-- Inventory Filter -->
    <string name="filter_view_by_model_number">View by Model #</string>
    <string name="filter_view_all_inventory">View all Inventory</string>
    <string name="filter_view_by_manufacturer">Filter by Manufacturer</string>
    <string name="filter_view_category">Filter by Category</string>
    <string name="filter_select_manufacturer">Select Manufacturer</string>
    <string name="filter_select_category">Select Category</string>
    <string name="filter_no_items_found">No items match your filtering criteria.</string>

</resources>
