<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/actionFilter"
        android:icon="@drawable/ic_menu_view"
        android:title="@string/action_filter"
        android:showAsAction="always" />
    <item android:id="@+id/actionRefresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="always" />
    <item android:id="@+id/actionSearch"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/action_search_item"
        android:showAsAction="always" />
    <item android:id="@+id/actionAdd"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/action_add_item"
        android:showAsAction="always" />
</menu>