<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/inventoryNormalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mt_white"
        android:visibility="visible">

        <ListView
            android:id="@+id/inventoryItemListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@color/mt_divider_gray"
            android:dividerHeight="1dp" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/inventoryEmptyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <com.milwaukeetool.mymilwaukee.view.MTTextView
                android:id="@+id/noInventoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_inventory_message"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/mt_margin_xl"
                android:layout_marginBottom="@dimen/mt_margin_small"
                android:background="@color/mt_white"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/mt_padding_standard"
                android:textColor="@color/mt_common_gray"
                android:textSize="@dimen/mt_font_size_large"/>

            <com.milwaukeetool.mymilwaukee.view.MTButton
                android:id="@+id/addInventoryBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/mt_margin_large"
                android:layout_marginRight="@dimen/mt_margin_large"
                android:layout_marginTop="@dimen/mt_padding_small"
                android:background="@drawable/red_button_selector"
                android:text="@string/btn_add_inventory"
                android:textColor="@color/mt_white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/inventoryNoItemsFoundLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <com.milwaukeetool.mymilwaukee.view.MTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/mt_margin_xl"
            android:layout_marginBottom="@dimen/mt_margin_small"
            android:background="@color/mt_white"
            android:singleLine="false"
            android:lineSpacingExtra="@dimen/mt_padding_standard"
            android:textColor="@color/mt_common_gray"
            android:textSize="@dimen/mt_font_size_large"
            android:text="@string/filter_no_items_found" />

    </RelativeLayout>

</FrameLayout>